@@ -19,6 +19,6 @@ class MyBatisTest {
     void selectAll() {
         List<Employee> employees = employeeMapper.selectAll();
         assertFalse(employees.isEmpty());
-        assertNotNull(employees.get(0).getFirstName());
+        assertNotNull(employees.getFirst().getFirstName());
     }
 }
