@@ -17,7 +17,7 @@ class SqlSessionTest {
             EmployeeMapper employeeMapper = session.getMapper(EmployeeMapper.class);
             List<Employee> employees = employeeMapper.selectAll();
             assertFalse(employees.isEmpty());
-            assertNotNull(employees.get(0).getFirstName());
+            assertNotNull(employees.getFirst().getFirstName());
         });
     }
 }
